--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "json": "mocha src/test/jsonTest.js",
     "cities": "mocha src/test/checkCities.js",
     "palindrome": "mocha src/test/palindrome.js",
-    "api_test": "mocha src/test/apiTesting/api_get.axios.js"
+    "api_test": "mocha src/test/apiTesting/api_get.axios.js",
+    "api_axios_test": "mocha src/test/apiTesting/get.axios.test.js"
   },
   "author": "",
   "license": "ISC",
