--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "json": "mocha src/test/jsonTest/jsonTest.js",
     "cities": "mocha src/test/globalPractice/checkCities.js",
     "palindrome": "mocha src/test/palindrome.test.js",
-    "api_test": "mocha src/test/apiTesting/api_get.axios.js",
-    "api_axios_test": "mocha src/test/apiTesting/get.axios.test.js",
     "my_first_promise": "mocha src/test/promise/miFirstPromise.test.js",
-    "super_hero_marvel_test": "mocha src/test/jsonSuperHero.test.js"
+    "super_hero_marvel_test": "mocha src/test/jsonSuperHero.test.js",
+    "api_axios_get_array": "mocha src/test/apiTesting/AXIOS/get.check.array.test.js",
+    "api_axios_get_example": "mocha src/test/apiTesting/AXIOS/get.example.test.js",
+    "api_axios_post_example": "mocha src/test/apiTesting/AXIOS/post.example.test.js"
   },
   "author": "",
   "license": "ISC",
