new promise exercise

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "readingNewFile": "mocha src/test/readingFile/readingNewFile.js",
     "my_first_promise": "mocha src/test/promise/miFirstPromise.test.js",
     "my_first_promise1": "mocha src/test/promise/miPromise1.test.js",
+    "my_promise2": "mocha src/test/promise/miPromise2.test.js",
+    "my_promise3": "mocha src/test/promise/miPromise3.test.js",
+    "my_promise4": "mocha src/test/promise/miPromise4.test.js",
     "super_hero_marvel_test": "mocha src/test/jsonSuperHero.test.js",
     "api_axios_get_array": "mocha src/test/apiTesting/AXIOS/get.check.array.test.js",
     "api_axios_get_example": "mocha src/test/apiTesting/AXIOS/get.example.test.js",
