--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "npm": "^8.5.0",
     "superagent": "^6.1.0"
   }
 }
