--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "api_axios_get_example": "mocha src/test/apiTesting/AXIOS/get.example.test.js",
     "api_axios_post_example": "mocha src/test/apiTesting/AXIOS/post.example.test.js",
     "api_chaiAndMocha_example": "mocha src/test/apiTesting/mochaAndchai/apitest.js",
-    "fsbp_us_get_catalog_documentSearch_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Catalog/documents.search.js"
+    "fsbp_us_get_catalog_documentSearch_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Catalog/documents.search.js",
+    "json_server_test1": "mocha src/test/apiTesting/mochaAndchai/jsonSeverTest.js"
   },
   "author": "",
   "license": "ISC",
@@ -35,6 +36,7 @@
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "json-server": "^0.17.0",
     "npm": "^8.5.0",
     "superagent": "^6.1.0"
   }
