--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "api_axios_post_example": "mocha src/test/apiTesting/AXIOS/post.example.test.js",
     "api_chaiAndMocha_example": "mocha src/test/apiTesting/mochaAndchai/apitest.js",
     "fsbp_us_get_catalog_documentSearch_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Catalog/documents.search.js",
+    "fsbp_us_post_authentication_account_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Account/Authenticate.js",
     "json_server_test1": "mocha src/test/apiTesting/mochaAndchai/jsonSeverTest.js"
   },
   "author": "",
