--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "api_chaiAndMocha_example": "mocha src/test/apiTesting/mochaAndchai/apitest.js",
     "fsbp_us_get_catalog_documentSearch_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Catalog/documents.search.js",
     "fsbp_us_post_authentication_account_test": "mocha src/test/apiTesting/mochaAndchai/FSBP_Web_services_US/Account/Authenticate.js",
-    "json_server_test1": "mocha src/test/apiTesting/mochaAndchai/jsonSeverTest.js"
+    "json_server_test1": "mocha src/test/apiTesting/mochaAndchai/jsonSeverTest.js",
+    "json_server_put_test1": "mocha src/test/apiTesting/mochaAndchai/put_example.js",
+    "json_server_patch_test1": "mocha src/test/apiTesting/mochaAndchai/patch_example.js"
   },
   "author": "",
   "license": "ISC",
